src/test/resources/syntax_errors/not_terminated_int_expr_stm.notc
void main() {
    5 6;
}
